# conveyors_2d

./: .gitattributes  .gitignore  .gitmodules  README.md  export_presets.cfg  icon.svg.import  project.godot
cpp_module/: CMakeLists.txt
cpp_module/exe/: CMakeLists.txt
cpp_module/src/: CMakeLists.txt
cpp_module/src/backup/factories/: Connector.h  Drawable.cpp  Drawable.h  FactorySystems.cpp  FactorySystems.h  Line.cpp  Line.h
cpp_module/src/backup/factories/recipe/: Recipe.h
cpp_module/src/backup/grid/: Grid.cpp  Grid.h
cpp_module/src/backup/level/: Level.h
cpp_module/src/lib/drawing/: Drawing.cpp  Drawing.h
cpp_module/src/lib/drawing/systems/: DrawingSystems.cpp  DrawingSystems.h
cpp_module/src/lib/factories/: Connector.cpp  Connector.h  Drawable.cpp  Drawable.h  FactorySystems.cpp  FactorySystems.h  Line.cpp  Line.h  PositionedLine.cpp  PositionedLine.h  Storer.h
cpp_module/src/lib/factories/recipe/: Recipe.cpp  Recipe.h
cpp_module/src/lib/grid/: Cell.cpp  Cell.h  Grid.cpp  Grid.h
cpp_module/src/lib/level/: Level.h
cpp_module/src/lib/line/: Line.cpp  Line.h  Merger.cpp  Merger.h  Splitter.cpp  Splitter.h
cpp_module/src/lib/line/recipe/: Recipe.cpp  Recipe.h
cpp_module/src/lib/line/storer/: Storer.cpp  Storer.h
cpp_module/src/lib/line/systems/: LineSystems.cpp  LineSystems.h
cpp_module/src/lib/manager/: LineManager.cpp  LineManager.h
cpp_module/src/lib/pipeline/: PipelineSteps.h
cpp_module/src/lib/registery/: register_types.cpp  register_types.h
gdextension/: conveyors_2d.gdextension
godot/scripts/: build_mode.gd  phase_state.gd
(+103 files in other folders)
